# instamate

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  types-requirements.txt
.github/workflows/: build.yml
examples/: follow_user_followers.py  get_common_followers.py  get_non_follow_backs.py  unfollow_users.py
instamate/: __init__.py  browser.py  cookies.py  exceptions.py  following.py  instamate.py  logging.py  unfollowing.py  workspace.py
instamate/pages/: auth.py  base.py  profile.py
instamate/queries/: graphql.py  user.py
pygram/: __init__.py  auth.py  browser.py  constants.py  exceptions.py  following.py  graphql.py  logging.py  pygram.py  sms.py  unfollowing.py  users.py  utils.py  workspace.py  xpath.py
pygram/db/: __init__.py  models.py
pygram/pages/: auth.py  base.py  profile.py
pygram/queries/: graphql.py  user.py
pygram/users/: __init__.py  base.py  followers.py  followings.py
requirements/: common.txt  dev.txt  test.txt
scripts/: follow_user_followers.py  get_common_followers.py  get_non_follow_backs.py  unfollow_users.py
tests/unit/: test_db.py  test_following.py  test_workspace.py
tests/unit/users/: test_followers.py
